[gd_scene load_steps=2 format=3 uid="uid://c0ggd770yx6ln"]

[ext_resource type="Script" path="res://csv_importer.gd" id="1_ta25j"]

[node name="CSV importer" type="Node2D"]
script = ExtResource("1_ta25j")

[node name="exit" type="Button" parent="."]
offset_top = 576.0
offset_right = 384.0
offset_bottom = 664.0
text = "EXIT"

[node name="TextEdit" type="TextEdit" parent="."]
offset_right = 1152.0
offset_bottom = 576.0
placeholder_text = "Input the csv file contents here"
autowrap_mode = 1

[node name="Import" type="Button" parent="."]
offset_left = 384.0
offset_top = 576.0
offset_right = 768.0
offset_bottom = 664.0
text = "Import"

[node name="Export" type="Button" parent="."]
offset_left = 768.0
offset_top = 576.0
offset_right = 1152.0
offset_bottom = 664.0
text = "Export"

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="Export" to="." method="_on_export_pressed"]
